log/build_2024-11-20_12-12-54/stm_station/stderr.log
  File "/home/iliass/ros2_athens_ws/install/stm_station/lib/python3.8/site-packages/stm_station/stm_serial_node_pub_sub.py", line 94
    self.serial_port.write(.....encode('utf-8'))
                               ^
SyntaxError: invalid syntax

